# lutils

./: README.md  core.html  genindex.html  index.html  io.html  objects.inv  plot.html  plt_cfg.html  py-modindex.html  pyproject.toml  searchindex.js  utils.html
_modules/: index.html
_modules/lutils/core/: case.html  manager.html
_modules/lutils/io/: parser.html
_modules/lutils/plot/: labels.html  plotter.html
_modules/lutils/plt_cfg/: labels.html
_modules/lutils/utils/: misc.html
docs/source/: index.rst
lutils/: __init__.py
lutils/core/: __init__.py  case.py  data.py  manager.py  utils.py
lutils/io/: parser.py
lutils/plot/: __init__.py  labels.py  plotter.py
lutils/plot/mplstyles/: lutils.mplstyle
lutils/utils/: __init__.py
testdata/openHFDIBRANS_kO/: Allclean  Allrun-slurm  log.correctLambdaBoundary  log.createLambdaBoundary  log.createPatch  log.readAndWriteHFDIBSigma  log.readAndWriteTurbulenceFields  log.readAndWriteVelocity  log.simpleHFDIBRANSFoam
testdata/openHFDIBRANS_kO/0/: iProci  k  lambda  nut  omega
testdata/openHFDIBRANS_kO/0.org/: U  epsilon  f  kQ  lambda  p
testdata/openHFDIBRANS_kO/3000/: HFDIBKOmega::kSurface  HFDIBKOmega::omegaGSurface  SIMPLE::normSurface  SIMPLE::surface  U  Ui  f  iProci  k  kQ  ki  lambda  nut  nuti  omega  p  phi  sigmai  surfNorm  uTaui  yEffi  yOrthoi  yPlusi
testdata/openHFDIBRANS_kO/constant/: HFDIBDEMDict  g  transportProperties  turbulenceProperties
testdata/openHFDIBRANS_kO/system/: controlDict  createPatchDictNewPatch  fvSchemes  fvSolution
testdata/simpleFoam_kO/: Allrun-slurm  log.readAndWriteSigma  log.readAndWriteTurbulenceFields  log.readAndWriteVelocity  log.simpleFoam
testdata/simpleFoam_kO/0/: U  epsilon  k  omega  p
testdata/simpleFoam_kO/0.org/: nut
testdata/simpleFoam_kO/751/: U  k  nut  omega  p  phi
testdata/simpleFoam_kO/constant/: turbulenceProperties
testdata/simpleFoam_kO/system/: blockMeshDict  (+5 more)
(+19 files in other folders)
