[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lutils"
version = "1.1.0"
description = "A Python library for managing and post-processing OpenFOAM cases."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "polars>=1.41.2",
]

[project.urls]
Homepage = "https://github.com/vecerniv/lutils"

[tool.setuptools.packages]
find = {}
