[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lutils"
module-root = ""

[project]
name = "lutils"
version = "1.1.0"
description = "A Python library for managing and post-processing OpenFOAM cases."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = ["OpenFOAM", "OpenHFDIB-RANS", "verification", "validation", "post-processing"]
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "polars>=1.41.2",
]

[project.urls]
Repository = "https://github.com/vecerniv/lutils"
Documentation = "https://vecerniv.github.io/lutils"
Issues = "https://github.com/vecerniv/lutils/issues"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.1.0",
]
